# WickedEngine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Content.vcxitems  Content.vcxitems.filters  Directory.Build.props.ghbuild  LICENSE  LICENSE.md  LICENSE.txt  README.md  README_Linux.md  SConstruct  ScriptingAPI-Documentation.md  Things to update.txt  WickedEngine-Documentation.md  WickedEngine.sln  appveyor.yml  build_HLSL6.bat  build_SPIRV.bat  build_macos.sh  builder.py  credits.txt  features.txt  generate_shader_buildtask_hlsl6.py  generate_shader_buildtask_spirv.py  generatesolution-win64.bat  io_export_wicked_wi_bin.py  licenses.txt  other_licenses.txt  readme.txt  third_party_software.txt  todo.txt
BlenderExporter/: CMakeLists.txt  python_bindings.cpp  test.py
BlenderExporter/wicked_blender_exporter/: __init__.py
Editor/: AIWindow.cpp  AIWindow.h  AnimationWindow.cpp  AnimationWindow.h  App.cpp  App.h  App_Windows.cpp  ArmatureWindow.cpp  ArmatureWindow.h  CMakeLists.txt  CameraComponentWindow.cpp  CameraComponentWindow.h  CameraWindow.cpp  CameraWindow.h  ColliderWindow.cpp  ColliderWindow.h  ComponentsWindow.cpp  ComponentsWindow.h  ConstraintWindow.cpp  ConstraintWindow.h  ContentBrowserWindow.cpp  ContentBrowserWindow.h  DecalWindow.cpp  DecalWindow.h  DummyVisualizer.cpp  DummyVisualizer.h  Editor.cpp  Editor.h  Editor.manifest  Editor.rc  Editor.vcxproj  Editor.vcxproj.filters  Editor_SOURCE.vcxitems  Editor_SOURCE.vcxitems.filters  Editor_UWP.vcxproj  Editor_UWP.vcxproj.filters  Editor_Windows.vcxproj  EmbeddedResources.cpp  EmitterWindow.cpp  EmitterWindow.h  (+129 more)
Editor/Assets/: Icon.c
Editor/Editor.xcodeproj/: project.pbxproj
Editor/Linux/: Dependencies.py  Install.py
Editor/fonts/: default_font.dds  readme.txt
Editor/images/: arealight.dds  armature.dds  camera.dds  decal.dds  directional_light.dds  emitter.dds  forcefield.dds  hair.dds  leaf.dds  pointlight.dds  sound.dds  spotlight.dds
Editor/languages/: Magyar.xml  readme.txt  日本語.xml  简体中文.xml
Editor/meshoptimizer/: clusterizer.cpp  indexcodec.cpp  indexgenerator.cpp  meshoptimizer.h  overdrawanalyzer.cpp  overdrawoptimizer.cpp  simplifier.cpp  spatialorder.cpp  stripifier.cpp  vcacheanalyzer.cpp  vcacheoptimizer.cpp  vertexcodec.cpp  vertexfilter.cpp  vfetchanalyzer.cpp  vfetchoptimizer.cpp
Editor/miniz/: miniz.h
Editor/stable-diffusion/: stable-diffusion.h
Editor/terrain/: base-LICENSE.txt  bush-LICENSE.txt  bush.wiscene  grass.ini  grassparticle.dds  high_altitude-LICENSE.txt  licenses.txt  low_altitude-LICENSE.txt  props.ini  rock-LICENSE.txt  rock.wiscene  slope-LICENSE.txt  tree-LICENSE.txt
Example_ImGui/: CMakeLists.txt  Example_ImGui.cpp  Example_ImGui.h  Example_ImGui.vcxproj  Example_ImGui.vcxproj.filters  ImGuiPS.hlsl  ImGuiVS.hlsl  Tests.cpp  Tests.h  Tests.rc  main_SDL2.cpp  main_Windows.cpp  resource.h
External_Template_Windows/: CMakeLists.txt  ReadMe.txt  TemplateWindows.rc  main.cpp
External_Template_Windows/cmake/: FindWickedEngine.cmake
External_Template_Windows/shaders/: bloomseparateCS.cso  blur_bilateral_unorm1CS.cso  blur_gaussian_float1CS.cso  blur_gaussian_float4CS.cso  blur_gaussian_unorm1CS.cso  blur_gaussian_unorm4CS.cso  bvh_hierarchyCS.cso  bvh_primitivesCS.cso  bvh_propagateaabbCS.cso  captureImpostorPS_albedo.cso  captureImpostorPS_normal.cso  captureImpostorPS_surface.cso  chromatic_aberrationCS.cso  circlePS.cso  colorgradeCS.cso  copytexture2D_float4CS.cso  copytexture2D_float4_borderexpandCS.cso  copytexture2D_unorm4CS.cso  copytexture2D_unorm4_borderexpandCS.cso  cubeMapPS.cso  cubeShadowGS.cso  cubeShadowGS_alphatest.cso  cubeShadowPS.cso  cubeShadowPS_alphatest.cso  cubeShadowVS.cso  cubeShadowVS_alphatest.cso  cubeVS.cso  decalPS.cso  decalVS.cso  deferredPS.cso  depthoffieldCS.cso  dirLightPS.cso  dirLightVS.cso  discLightPS.cso  downsampleDepthBuffer4xPS.cso  emittedparticlePS_simplest.cso  emittedparticlePS_soft.cso  emittedparticlePS_soft_distortion.cso  emittedparticleVS.cso  emittedparticle_emitCS.cso  (+196 more)
Projects/Template/: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/Example_ImGui/: CMakeLists.txt  Example_ImGui.cpp  Example_ImGui.h  Example_ImGui.vcxproj  Example_ImGui.vcxproj.filters  Tests.rc  imgui.ini  main_SDL2.cpp  main_SDL3.cpp  main_Windows.cpp  resource.h  stdafx.h
Samples/Example_ImGui_Docking/: CMakeLists.txt  Example_ImGui.vcxproj.filters  Example_ImGui_Docking.cpp  Example_ImGui_Docking.h  Example_ImGui_Docking.vcxproj  Example_ImGui_Docking.vcxproj.filters  Tests.rc  font_test.txt  imgui.ini  main_SDL2.cpp  main_SDL3.cpp  main_Windows.cpp  stdafx.h
Samples/Template_Linux/: CMakeLists.txt  ReadMe.txt  main.cpp  stdafx.h
Samples/Template_MacOS/: CMakeLists.txt  main.cpp  main.mm
Samples/Template_Windows/: CMakeLists.txt  ReadMe.txt  TemplateWindows.rc  Template_Windows.vcxproj  (+4 more)
Template_Linux/: App.cpp  App.h  CMakeLists.txt  Icon.h  ReadMe.txt  main.cpp  stdafx.h
Template_Windows/: CMakeLists.txt  ReadMe.txt  TemplateWindows.rc  Template_Windows.vcxproj  Template_Windows.vcxproj.filters  main.cpp  resource.h  stdafx.h
Tests/: CMakeLists.txt  Tests.cpp  Tests.h  Tests.rc  Tests.vcxproj  Tests.vcxproj.filters  font_test.txt  main.cpp  main_SDL2.cpp  main_Windows.cpp  resource.h  stdafx.h  test_script.lua
WickedEngine/: AnimationWindow.cpp  AnimationWindow.h  Application.cpp  Application_BindLua.cpp  Application_BindLua.h  ArchiveVersionHistory.txt  BULLET.cpp  BULLET.h  BackLog.cpp  BackLog.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraWindow.cpp  CameraWindow.h  Character.cpp  Character.h  Client.cpp  Client.h  CommonInclude.h  ConstantBufferMapping.h  CpuInfo.cpp  CpuInfo.h  Cube.cpp  Cube.h  DecalWindow.cpp  DecalWindow.h  DeferredRenderableComponent.cpp  DeferredRenderableComponent.h  DeferredRenderableComponent_BindLua.cpp  DeferredRenderableComponent_BindLua.h  DepthTarget.cpp  DepthTarget.h  DirectInput.cpp  DirectInput.h  DirectXCollision.h  DirectXCollision.inl  DirectXColors.h  DirectXMath.h  DirectXMathCommon.h  (+1101 more)
(+1404 files in other folders)
